clang/test/BSC/Negative/Trait/r3/trait_cast_trait/trait_cast_trait.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  int foo(This *this);
};
_Trait G {};

void test() {
  _Trait G *g;
  _Trait F *q = g; // expected-error {{expected a pointer type which has implemented '_Trait F', found '_Trait G *'}}
  _Trait F *q1 = (_Trait F *)g; // expected-error {{expected a pointer type which has implemented '_Trait F', found '_Trait G *'}}
  q = g; // expected-error {{assigning to 'struct __Trait_F' from incompatible type '_Trait G *'}}
  q1 = (_Trait F *)g; // expected-error {{assigning to 'struct __Trait_F' from incompatible type '_Trait G *'}}
}